# RogueBot

./: .gitignore  CMakeLists.txt  CONTRIBUCION.MD  LICENSE  Makefile  README.md  bug_report.md  feature_request.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-deb-on-release.yml  ci-linux.yml  ci.yml  release.yml
_staging/usr/share/applications/: roguebot.desktop
assets/docs/: objetos.txt
assets/locales/: roguebot.pot
assets/locales/en_GB/LC_MESSAGES/: roguebot.mo  roguebot.po
assets/locales/es_ES/LC_MESSAGES/: roguebot.mo  roguebot.po
build-web/: Makefile  index.js  index.wasm  roguebot.data  roguebot.html  roguebot.js  roguebot.wasm
debian/: changelog  control  debhelper-build-stamp  files  rules
debian/.debhelper/roguebot/: dbgsym-build-ids
debian/.debhelper/roguebot/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/roguebot/dbgsym-root/usr/share/doc/: roguebot-dbgsym
debian/roguebot/DEBIAN/: control  md5sums
debian/roguebot/usr/share/roguebot/assets/docs/: objetos.txt
docs/: Entregable1_Hito2.md  GDD.md
packaging/windows/: roguebot.rc
src/: Enemy.cpp  Enemy.hpp  EnemySystem.cpp  Game.cpp  Game.hpp  GameUtils.hpp  HUD.cpp  HUD.hpp  ItemSpawner.hpp  ItemSystem.cpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  State.cpp  State.hpp  main.cpp
src/core/: AssetPath.hpp  Attack.hpp  Easing.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameAudio.cpp  GameCamera.cpp  GameCombat.cpp  GameInput.cpp  GameMovement.cpp  GameRender.cpp  GameUtils.cpp  GameUtils.hpp  GettextCompat.hpp  I18n.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
src/systems/: EnemySystem.cpp  GameUI.cpp  HUD.cpp  HUD.hpp  ItemSpawner.hpp  ItemSystem.cpp
tests/: CMakeLists.txt  test_assetpath.cpp  test_assetpath_known_file_exists.cpp  test_compute_melee_tiles_cross.cpp  test_compute_melee_tiles_front.cpp  test_compute_melee_tiles_negative_range.cpp  test_compute_melee_tiles_occluded_front.cpp  test_compute_melee_tiles_range_zero.cpp  test_dominant_axis.cpp  test_dominant_axis_tie_behavior.cpp  test_enemy.cpp  test_enemy_sprites_exist.cpp  test_facing_from_dir.cpp  test_facing_from_dir_non_unit_vectors.cpp  test_find_exit_tile.cpp  test_floats_hud_easing.cpp  test_gettext_translation.cpp  test_gettext_translation_es_es.cpp  test_i18n_mo_files_exist_en_es.cpp  test_is_adjacent4.cpp  test_locales_exist.cpp  test_map_boss_arena_structure.cpp  test_map_deterministic_seed.cpp  test_map_exit_tile_is_exit.cpp  test_map_generate_creates_some_floor.cpp  test_map_generate_exit_in_bounds.cpp  test_map_generate_places_exit.cpp  test_map_generate_sets_dimensions.cpp  test_map_is_walkable.cpp  test_map_set_tile_bounds.cpp  test_perform_melee_hit.cpp  test_player.cpp
